<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fabric_detail_contigency"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/contigency_val"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/contigency_select"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="6" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fabric_detail_sizes" />

    <ListView
        android:id="@+id/size_view"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fabric_detail_total"
            android:textColor="#FF00FF00"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/total_val"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#FF00FF00"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
    </LinearLayout>

    <Button
        android:id="@+id/add_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/fabric_detail_add_size" />
    
    <com.amazon.device.ads.AdLayout 
        android:id="@+id/adview" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"/>

</LinearLayout>