<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:Amazon="http://schemas.android.com/apk/lib/com.amazon.device.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.37"
            android:text="@string/mkr_plies"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mkr_colon"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
        <TextView
            android:id="@+id/mkr_plies"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.04"
            android:text="@string/mkr_brek"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mkr_colon"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/mkr_break"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
    
    <TextView
			android:id="@+id/break_note"
            android:layout_width="fill_parent"
            android:text="@string/mkr_sizes"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    
    <TextView
        	style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:text="@string/mkr_sizes"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    
    <ListView
        android:id="@+id/mkr_sizes"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

    </ListView>
    
    <com.amazon.device.ads.AdLayout 
        android:id="@+id/adview" 
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"/>

</LinearLayout>